Update Libro.java
Había que trunca el valorObtenido a un decimal (formato= #0.0)